update to use Java 17-ism